Added javascript code and changed some styles

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
   font-family: "Raleway", Arial, Helvetica, sans-serif;
 }
 
-#score-display {
+#score-wrapper {
   text-align: center;
 }
 
